--- a/base/templates/base/login_register.html
+++ b/base/templates/base/login_register.html
@@ -2,9 +2,9 @@
 
 {% block content %}
 
+{% if page == 'login' %}
 <div>
-
-<form method="post" action="">
+<form method="POST" action="">
     {% csrf_token %}
     <label>Username:</label>
     <input type="text" name="username" placeholder="Enter Username"/>
@@ -14,6 +14,21 @@
 
 </form>
 
+<p> Havent signed up yet?</p>
+<a href="{% url 'register' %}">Sign up</a>
 </div>
 
+{% else %}
+<div>
+    <form method="POST" action="">
+        {% csrf_token %}
+        {{ form.as_p}}
+        <input type="submit" value="Register" />
+    
+    </form>
+    
+<p> Already signed up ?</p>
+<a href="{% url 'login' %}">Sign in</a>
+    </div>
+    {% endif %}
 {% endblock content %}
