--- a/base/templates/base/room.html
+++ b/base/templates/base/room.html
@@ -4,8 +4,28 @@
 
 <h1>{{room.name}}</h1>
 
-<h2>{{room.messages.body}}</h2>
+<h2>{{room.description}}</h2>
 
-message
+
+<div class="comment-wrapper">
+    <h3> conversation </h3>
+    {% for message in roomMessages %}
+    <div>
+        <span>@{{message.user}}  {{message.created|timesince}} ago</span>
+        <p>{{message.body}}</p>
+    </div>
+
+    {% endfor %}
+    <hr>
+</div>
+
+{% if user.is_authenticated %}
+<div class="comment-form">
+    <form method="POST" action="">
+        {% csrf_token %}
+        <input type="text" name="body" placeholder="Enter your message here"/>
+    </form>
+</div>
+{% endif %}
 
 {% endblock content %}
